--- a/index/deptry/index.html
+++ b/index/deptry/index.html
@@ -3,6 +3,8 @@
 <head><title>Links for deptry</title></head>
 <body>
     <h1>Links for deptry</h1>
-    <!-- This file will be automatically updated by CI when a new release is created -->
+    <a href="https://github.com/doppelxyz/deptry/releases/download/v0.24.0/deptry-0.24.0+doppel-cp310-abi3-macosx_10_12_x86_64.whl">deptry-0.24.0+doppel-cp310-abi3-macosx_10_12_x86_64.whl</a><br/>
+    <a href="https://github.com/doppelxyz/deptry/releases/download/v0.24.0/deptry-0.24.0+doppel-cp310-abi3-macosx_11_0_arm64.whl">deptry-0.24.0+doppel-cp310-abi3-macosx_11_0_arm64.whl</a><br/>
+    <a href="https://github.com/doppelxyz/deptry/releases/download/v0.24.0/deptry-0.24.0+doppel-cp310-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl">deptry-0.24.0+doppel-cp310-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br/>
 </body>
 </html>
